# shamir-tpsi

./: .gitignore  CMakeLists.txt  README.md
apps/: receiver_main.cpp  sender_main.cpp
benchmarks/: CMakeLists.txt  protocol_bench.cpp
cmake/: FindNTL.cmake
docs/: api_server.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vitest.setup.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts
frontend/src/components/layout/: SidebarNav.vue  UserBadge.vue
frontend/src/components/sessions/: DatasetDetailDrawer.vue  SessionDetailDrawer.vue
frontend/src/components/ui/: ToastHost.vue
frontend/src/composables/: useDatasetUpload.ts
frontend/src/router/: index.ts
frontend/src/services/: toast.ts
frontend/src/stores/: auth.ts  datasets.ts  messages.ts  requests.ts  sessions.ts
frontend/src/styles/: base.css
frontend/src/views/: DashboardHome.vue  DashboardLayout.vue  DatasetsView.vue  MessagesView.vue  SessionsView.vue  SettingsView.vue
frontend/src/views/admin/: AdminMessages.vue
frontend/src/views/auth/: AuthLayout.vue  LoginView.vue  RegisterView.vue
frontend/src/views/profile/: ProfileBasic.vue  ProfileLayout.vue  ProfileNotifications.vue  ProfileSecurity.vue
frontend/src/views/receiver/: ReceiverLayout.vue  ReceiverOverview.vue  ReceiverRequests.vue  ReceiverResults.vue
frontend/src/views/sender/: SenderDatasets.vue  SenderLayout.vue  SenderOverview.vue  SenderRequests.vue
include/tpsi/: aes_ctr_prng.hpp  coin_flip.hpp  config_io.hpp  message_channel.hpp  pcg.hpp  polynomial.hpp  polynomial_backend.hpp  random_provider.hpp  ring.hpp  ring_lpn_pcg.hpp  rss.hpp  serialization.hpp  session.hpp  shamir.hpp
src/: aes_ctr_prng.cpp  coin_flip.cpp  config_io.cpp  message_channel.cpp  pcg.cpp  polynomial.cpp  polynomial_backend.cpp  random_provider.cpp  ring.cpp  ring_lpn_pcg.cpp  rss.cpp  serialization.cpp  session.cpp  shamir.cpp
src/server/: main.cpp
tests/: CMakeLists.txt  shamir_tests.cpp
平衡模型测试截图/: README.md
非平衡模型测试截图/: README.md
